# perceptron

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  README.md  Untitled.ipynb  notebook.tex  sprawozdanie.pyg  sprawozdanie.tex  test.txt
data/: e100000l02m09  e5000l02m00  e5000l02m00.xml  e5000l02m00b  e5000l02m00b.xml  e5000l02m09  e5000l02m09.xml  e5000l02m09b  e5000l02m09b.xml  e5000l06m00  e5000l06m00.xml  e5000l06m00b  e5000l06m00b.xml  e5000l09m00  e5000l09m00.xml  e5000l09m00b  e5000l09m00b.xml  e5000l09m06  e5000l09m06.xml  e5000l09m06b  e5000l09m06b.xml  iris433_120000  iris4343_40000  iris4433_40000  iris443_120000  iris473_100000  iris_433_70000  iris_433_70000b  iris_43_12  iris_43_500000  iris_43_70000  iris_443_10000  iris_44443_10000  iris_44443_70000b  iris_4543_10000  iris_4543_70000  iris_4543_70000b  iris_473_10000  iris_473_10000_take2  iris_473_10000_take3  (+10 more)
data_b/: assign_in2out.csv  iris_44443_70000  xor.csv
inc/: activationFunction.h  application.h  fileLogger.h  func.h  net.h  neuron.h  propagation.h  serializer.h
sprawozdanie/: Untitled.tex
sprawozdanie2/: Untitled.tex  sprawozdanie2.aux  sprawozdanie2.tex
src/: activationFunction.cpp  application.cpp  fileLogger.cpp  func.cpp  layers.rs  main.cpp  main.rs  net.cpp  neuron.cpp  neuron.rs  propagation.cpp  serializer.cpp
